# src/controllers/postTags.controllers.js
@@ -1,43 +1,88 @@
-const { Post, Tag } = require('../models')
+const {Post, Tag} = require("../models")
 
 const agregarEtiqueta = async (req, res) => {
-    try {
-        const post = await Post.findByPk(req.params.postId)
-        const tag = await Tag.findByPk(req.params.tagId)
-
-        if (!post || !tag) {
-            return res.status(404).json({
-                mensaje: 'Post o etiqueta no encontrada'
-            })
+    /* #swagger.tags = ['Publicaciones']
+        #swagger.summary = 'Agrega una etiqueta por su id a una publicacion del sistema por su id'
+        #swagger.parameters['postId'] = {
+            in: 'path',
+            description: 'ID de la publicación',
+            required: true,
+            type: 'integer'
         }
+        #swagger.parameters['tagId'] = {
+            in: 'path',
+            description: 'ID de la etiqueta',
+            required: true,
+            type: 'integer'
+        }
+        #swagger.responses[200] = {
+            description: 'Etiqueta asociada exitosamente.'
+        }
+        #swagger.responses[404] = {
+            description: 'Publicacion no encontrada.'
+        }
+        #swagger.responses[404] = {
+            description: 'Etiqueta no encontrada.'
+        }
+    */
+
+    try {
+        const post = req.publicacion
+        const tag = req.etiqueta
 
         await post.addTag(tag)
 
         res.json({
-            mensaje: 'Etiqueta asociada correctamente'
+            mensaje: 'Etiqueta asociada exitosamente'
         })
 
     } catch (error) {
-        res.status(500).json({ error: error.message })
+        res.status(500).json({ error: `Hubo un error a la hora de agregar una etiqueta al post: ${error.message}` })
     }
 }
 
 const obtenerEtiquetasDePost = async (req, res) => {
-    try {
-        const post = await Post.findByPk(req.params.postId)
+    /* #swagger.tags = ['Publicaciones']
+        #swagger.summary = 'Obtener todas las etiquetas de una publicacion del sistema por su id'
+        #swagger.parameters['postId'] = {
+            in: 'path',
+            description: 'ID de la publicación',
+            required: true,
+            type: 'integer'
+        }
+        #swagger.responses[200] = {
+            description: 'Etiquetas de la publicacion.'
+        }
+        #swagger.responses[404] = {
+            description: 'Publicacion no encontrada.'
+        }
+    */
 
-        if (!post) {
-            return res.status(404).json({
-                mensaje: 'Post no encontrado'
-            })
+    try {
+        const {id} = req.publicacion
+
+        const etiquetas = await Post.findByPk(id, {
+            attributes: [],
+            include: {
+                model: Tag,
+                as: "tags",
+                attributes: ["name"],
+                through:{
+                    attributes: []
+                }
+            }
+        })
+
+        const etiquetasMapeadas = etiquetas.tags.map(e => e.name)
+        const return_final = {
+            publicacion_id: id,
+            etiquetas: etiquetasMapeadas
         }
 
-        const etiquetas = await post.getTags()
-
-        res.json(etiquetas)
+        res.json(return_final)
 
     } catch (error) {
-        res.status(500).json({ error: error.message })
+        res.status(500).json({ error: `Hubo un error a la hora de obtener etiquetas de un post por id: ${error.message}` })
     }
 }
 
